# chip8-emu

./: .gitignore  Makefile  meson.build
include/: cpu.h  cpu.hpp  definitions.h  definitions.hpp  error.h  flash-memory.hpp  type.h  utils.hpp
src/: cpu.c  cpu.cpp  error.c  ram.cpp  ram.hpp  rom.hpp  types.hpp  utils.cpp
test/: main.cpp  ram.hpp
